traces/bug_526.txt
examples++-load/Curvature.cpp:561: error: DEAD_STORE
  The value written to &nv (type int) is never used.
Showing all 1 steps of the trace


examples++-load/Curvature.cpp:561:5: Write of unused value
559.       double l[3];
560.       double m[3]={a11,a12,a22};
561.       int nv=eigen2(m,l,vp);
           ^
562.       l[2]=att;
563.       double s1 = l[1]-l[0];
